--- a/src/dexih.connections.webservice.soap/dexih.connections.webservice.soap.csproj
+++ b/src/dexih.connections.webservice.soap/dexih.connections.webservice.soap.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - Connections - Soap WebServices</AssemblyTitle>
     <VersionPrefix>0.2.4</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <TargetFrameworks>netstandard1.3;net462</TargetFrameworks>
     <AssemblyName>dexih.connections.webservice.soap</AssemblyName>
     <PackageId>dexih.connections.webservice.soap</PackageId>
