--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -24,15 +24,14 @@
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>-->
   <ItemGroup>
-    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
-    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3">
     </PackageReference>
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Data.Common" Version="4.3.0">
     </PackageReference>
-    <PackageReference Include="System.Net.Security" Version="4.3.2" />
+    <PackageReference Include="System.Net.Security" Version="4.3.1">
+    </PackageReference>
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0">
     </PackageReference>
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.0">
