--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,8 +15,8 @@ init:
 install:
 # - ps: Start-FileDownload 'https://download.microsoft.com/download/5/F/E/5FEB7E95-C643-48D5-8329-9D2C63676CE8/dotnet-dev-win-x64.1.0.0-rc4-004771.exe'
 # - dotnet-dev-win-x64.1.0.0-rc4-004771.exe /quiet
-# - ps: Start-FileDownload https://download.microsoft.com/download/0/F/D/0FD852A4-7EA1-4E2A-983A-0484AC19B92C/dotnet-sdk-2.0.0-win-x64.exe
-# - dotnet-sdk-2.0.0-win-x64.exe /quiet
+- ps: Start-FileDownload https://download.microsoft.com/download/0/F/D/0FD852A4-7EA1-4E2A-983A-0484AC19B92C/dotnet-sdk-2.0.0-win-x64.exe
+- dotnet-sdk-2.0.0-win-x64.exe /quiet
 environment:
   PATH: $(PATH);$(PROGRAMFILES)\dotnet\
 test_script:
