--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -24,6 +24,8 @@
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>-->
   <ItemGroup>
+    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
+    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3">
     </PackageReference>
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
@@ -42,10 +44,8 @@
     </PackageReference>
     <PackageReference Include="System.Xml.XPath.XDocument" Version="4.3.0">
     </PackageReference>
-    <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.7-ALPHA" />
-    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.3-ALPHA" />
-    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.7" />
-    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
+    <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.8" />
+    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.4" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.8.0" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
