--- a/src/dexih.connections.azure/dexih.connections.azure.csproj
+++ b/src/dexih.connections.azure/dexih.connections.azure.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - Azure Connections</AssemblyTitle>
     <VersionPrefix>0.3.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.connections.azure</AssemblyName>
     <PackageId>dexih.connections.azure</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql</PackageTags>
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.5.0" />
   </ItemGroup>
 </Project>
