--- a/src/dexih.connections.flatfile/dexih.connections.flatfile.csproj
+++ b/src/dexih.connections.flatfile/dexih.connections.flatfile.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - Flat File Connections</AssemblyTitle>
     <VersionPrefix>0.3.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.connections.flatfile</AssemblyName>
     <PackageId>dexih.connections.flatfile</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql</PackageTags>
@@ -26,6 +26,6 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="2.16.3" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 </Project>
