--- a/src/dexih.connections.sql/dexih.connections.sql.csproj
+++ b/src/dexih.connections.sql/dexih.connections.sql.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0" />
     <PackageReference Include="MySqlConnector" Version="0.29.1" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
   </ItemGroup>
