--- a/src/dexih.connections.webservice.restful/dexih.connections.webservice.restful.csproj
+++ b/src/dexih.connections.webservice.restful/dexih.connections.webservice.restful.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - Connections Library - Restful Web Services</AssemblyTitle>
     <VersionPrefix>0.3.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.connections.webservice.restful</AssemblyName>
     <PackageId>dexih.connections.webservice.restful</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;Web Service;Rest;Restful</PackageTags>
@@ -19,5 +19,8 @@
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj">
     </ProjectReference>
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 </Project>
