--- a/test/dexih.connections.flatfile.tests/dexih.connections.flatfile.tests.csproj
+++ b/test/dexih.connections.flatfile.tests/dexih.connections.flatfile.tests.csproj
@@ -13,6 +13,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\dexih.connections.flatfile\dexih.connections.flatfile.csproj">
     </ProjectReference>
+    <ProjectReference Include="..\..\src\dexih.connections.ftp\dexih.connections.ftp.csproj">
+      <Project>{0F400007-EC3E-4E2E-BC41-A63657FBB436}</Project>
+      <Name>dexih.connections.ftp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\dexih.connections.sftp\dexih.connections.sftp.csproj" />
     <ProjectReference Include="..\dexih.connections.test\dexih.connections.test.csproj">
     </ProjectReference>
     <ProjectReference Include="..\dexih.connections.sql.tests\dexih.connections.sql.tests.csproj" />
