--- a/src/dexih.connections.sftp/dexih.connections.sftp.csproj
+++ b/src/dexih.connections.sftp/dexih.connections.sftp.csproj
@@ -4,8 +4,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
+    <PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
+    <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dexih.connections.flatfile\dexih.connections.flatfile.csproj" />
+    <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
   </ItemGroup>
 </Project>
