--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - Supporting Functions</AssemblyTitle>
     <VersionPrefix>0.3.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.functions</AssemblyName>
     <PackageId>dexih.functions</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Poco;Data Processing;</PackageTags>
@@ -23,11 +23,11 @@
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>-->
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="2.16.3" />
+    <PackageReference Include="CsvHelper" Version="7.0.1" />
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
+    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.7" />
     <PackageReference Include="Dexih.Utils.DataType" Version="0.1.13" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3">
-    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Data.Common" Version="4.3.0">
@@ -45,7 +45,6 @@
     <PackageReference Include="System.Xml.XPath.XDocument" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.8" />
-    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.4" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.8.0" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
