--- a/test/dexih.connections.webservice.restful.tests/dexih.connections.webservice.restful.tests.csproj
+++ b/test/dexih.connections.webservice.restful.tests/dexih.connections.webservice.restful.tests.csproj
@@ -10,24 +10,23 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.0.0" />
   </ItemGroup>
-    <ItemGroup>
+  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-  </Content>
-
+    </Content>
   </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\..\src\dexih.connections.webservice.restful\dexih.connections.webservice.restful.csproj" />
-      <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj" />
-      <ProjectReference Include="..\..\src\dexih.transforms\dexih.transforms.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-      <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-    </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\dexih.connections.webservice.restful\dexih.connections.webservice.restful.csproj" />
+    <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj" />
+    <ProjectReference Include="..\..\src\dexih.transforms\dexih.transforms.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
 </Project>
