--- a/src/dexih.connections.webservice.restful/dexih.connections.webservice.restful.csproj
+++ b/src/dexih.connections.webservice.restful/dexih.connections.webservice.restful.csproj
@@ -19,4 +19,7 @@
     </ProjectReference>
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  </ItemGroup>
 </Project>
