--- a/src/dexih.connections.azure/dexih.connections.azure.csproj
+++ b/src/dexih.connections.azure/dexih.connections.azure.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.1.1" />
   </ItemGroup>
 </Project>
