--- a/src/dexih.connections.dexih/dexih.connections.dexih.csproj
+++ b/src/dexih.connections.dexih/dexih.connections.dexih.csproj
@@ -18,4 +18,7 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  </ItemGroup>
 </Project>
