--- a/src/dexih.connections.excel/dexih.connections.excel.csproj
+++ b/src/dexih.connections.excel/dexih.connections.excel.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EPPlus.Core" Version="1.5.4" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
   </ItemGroup>
 </Project>
