--- a/src/dexih.connections.ftp/dexih.connections.ftp.csproj
+++ b/src/dexih.connections.ftp/dexih.connections.ftp.csproj
@@ -3,9 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FluentFTP" Version="19.1.3" />
+    <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
+    <PackageReference Include="FluentFTP" Version="19.2.2" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
   </ItemGroup>
 </Project>
