--- a/src/dexih.connections.sql/dexih.connections.sql.csproj
+++ b/src/dexih.connections.sql/dexih.connections.sql.csproj
@@ -20,9 +20,10 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.1" />
-    <PackageReference Include="MySqlConnector" Version="0.39.0" />
-    <PackageReference Include="Npgsql" Version="3.2.7" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.4.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0-rc1-final" />
+    <PackageReference Include="MySqlConnector" Version="0.40.3" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="Npgsql" Version="4.0.0-rc1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.0-rc1" />
   </ItemGroup>
 </Project>
