--- a/src/dexih.connections.mysql/dexih.connections.mysql.csproj
+++ b/src/dexih.connections.mysql/dexih.connections.mysql.csproj
@@ -1,21 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Data transformation and anaytics library - Connections to a Data Experts Integration Hub</Description>
-    <AssemblyTitle>Data Experts Group - Integration Hub Connection</AssemblyTitle>
+    <Description>Data transformation and anaytics library - MySql Connection and reader.</Description>
+    <AssemblyTitle>Data Experts Group - MySql Connection</AssemblyTitle>
     <VersionPrefix>0.3.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>dexih.connections.dexih</AssemblyName>
-    <PackageId>dexih.connections.dexih</PackageId>
+    <AssemblyName>dexih.connections.mysql</AssemblyName>
+    <PackageId>dexih.connections.mysql</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
     <PackageReleaseNotes>Refer to the project url (https://github.com/dataexperts/dexih.transforms) for documentation and raising issues</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/dataexperts/dexih.transforms</PackageProjectUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-  </PropertyGroup>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>  
+</PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
+    <PackageReference Include="MySqlConnector" Version="0.40.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
   </ItemGroup>
+
 </Project>
