--- a/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
+++ b/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
