--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -24,7 +24,6 @@
   </ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="7.1.0" />
-    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.7" />
     <PackageReference Include="Dexih.Utils.DataType" Version="0.1.18" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
@@ -32,18 +31,21 @@
     </PackageReference>
     <PackageReference Include="System.Data.Common" Version="4.3.0">
     </PackageReference>
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0-rc1" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.0">
     </PackageReference>
-    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0-rc1" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0">
     </PackageReference>
-    <PackageReference Include="System.ValueTuple" Version="4.5.0-rc1" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="System.Xml.XPath" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Xml.XPath.XDocument" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Dexih.Utils.CopyProperties\src\Dexih.Utils.CopyProperties\Dexih.Utils.CopyProperties.csproj" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputType>Library</OutputType>
