--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -4,7 +4,6 @@
     <AssemblyTitle>Data Experts Group - Supporting Functions</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.functions</AssemblyName>
     <PackageId>dexih.functions</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
@@ -16,6 +15,8 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+    <LangVersion>7.1</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <!--<ItemGroup>
     <Compile Include="**\*.cs" />
@@ -25,7 +26,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="7.1.1" />
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.60" />
-    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.7" />
+    <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.9" />
     <PackageReference Include="Dexih.Utils.DataType" Version="0.1.24" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
