added arrays and multiple functions

--- a/src/dexih.connections.postgressql/dexih.connections.postgressql.csproj
+++ b/src/dexih.connections.postgressql/dexih.connections.postgressql.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - PostgresSql Connection</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>dexih.connections.postgressql</AssemblyName>
     <PackageId>dexih.connections.postgressql</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
