--- a/src/dexih.connections.mysql/dexih.connections.mysql.csproj
+++ b/src/dexih.connections.mysql/dexih.connections.mysql.csproj
@@ -4,7 +4,7 @@
     <AssemblyTitle>Data Experts Group - MySql Connection</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>dexih.connections.mysql</AssemblyName>
     <PackageId>dexih.connections.mysql</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
