multiple bug fixes, working on db2

--- a/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
+++ b/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\test\dexih.functions.tests\dexih.functions.tests.csproj" />
     <ProjectReference Include="..\dexih.transforms\dexih.transforms.csproj" />
   </ItemGroup>
 
